static/src/stylesheets/module/_discussion.scss
/* ... */
.discussion__loader,
.discussion--loading .d-thread {
    display: none;
}

.js-on .discussion--loading .discussion__loader {
    display: block;
}

/* Toolbar
========================================================================== */

.discussion__toolbar {
    .id--signed-in .discussion--open &,
    .discussion--has-top-comments & {
        border-top: 1px solid colour(neutral-4);
    }
}

.discussion__toolbar-dropdown {
    position: relative;
    top: 1px;
    float: left;
    @include fs-textSans(2);
    color: colour(neutral-2);
    display: inline-block;
    line-height: $gs-baseline * 2;

    margin: $gs-baseline 0;

    .popup,
    .popup__toggle.is-active:before {
        margin-top: -1 * $gs-baseline;
    }

    .popup__action {
        text-transform: capitalize;
    }
    .popup__toggle {
        display: inline-block;
        width: auto;
        &:after {
            border-top-color: colour(neutral-2);
        }
        &.is-active:after {
            border-bottom-color: colour(neutral-2);
        }
    }
    span {
        font-weight: bold;
        text-transform: capitalize;
        margin: 0 $gs-gutter / 4 0 $gs-gutter / 2;
    }

    &:first-child {
        padding-right: $gs-gutter;
        margin-right: $gs-gutter;
        border-right: 1px solid colour(neutral-4);
    }
}

/* All comments (top level and reply)
   ========================================================================== */

.d-comment {
    margin: 0;
    padding: 0;
    display: block;
    clear: both;
    position: relative;
}

.d-comment__main {
    padding-bottom: $gs-baseline * 3;
}

.d-comment__main--removed {
    padding-bottom: $gs-baseline;
}

.d-comment__inner {
    padding-top: $gs-baseline / 2;
    position: relative;
}

.d-comment:target {
    background-color: colour(neutral-7);
    &:before,
    &:after {
        content: '';
        position: absolute;
        height: 100%;
        width: .5 * $gs-gutter;
        top: -1px;
        background-color: colour(neutral-7);
        border-style: solid;
        border-width: 1px 0;
        border-color: colour(neutral-4);
    }
    &:before {
        left: -.5 * $gs-gutter;
    }
    &:after {
        right: -.5 * $gs-gutter;
    }
}

.d-comment-box--top-level .d-comment-box__meta {
    position: relative;

    @include mq(tablet) {
        margin-top: $gs-baseline / 2;
    }
    @include mq(leftCol) {
        position: absolute;
        margin-left: -1 * ($left-column + $gs-gutter);
        width: $left-column;
        top: $gs-baseline * 4;
    }
    @include mq(wide) {
        margin-left: -1 * ($left-column-wide + $gs-gutter);
        width: $left-column;
    }

    @include mq($until: tablet) {
        .d-comment-box__avatar-wrapper {
            display: none;
        }
    }

    @include mq($until: desktop) {
        .user-avatar__image {
            width: $avatarSize-small;
            height: $avatarSize-small;
        }
    }
}

.d-comment__avatar-wrapper,
.d-comment-box__avatar-wrapper {
    float: left;
    margin-right: ($gs-gutter / 5) * 2;
    margin-top: $gs-baseline / 6;
}

.d-comment-box__avatar-wrapper .user-avatar__image {
    width: 60px;
    height: 60px;
}

.d-comment__avatar,
.user-avatar__image {
    @include border-radius(50%);
}

.d-comment__meta-text,
.d-comment-box__meta-text {
    padding-right: $gs-gutter * 2.5;
    @include box-sizing(border-box);
}

.d-comment__author,
.d-comment-box__author {
    overflow: hidden;
    padding-right: $gs-gutter / 4;
    @include fs-textSans(4);
    font-weight: bold;
    text-overflow: ellipsis;

    @include mq(tablet) {
        display: block;
    }
}

.d-comment__author {
    display: inline;
}

.d-comment-box__author-label {
    @include fs-textSans(4);
    color: colour(neutral-2);
}
.d-comment__author-label {
    display: block;
    @include fs-textSans(1);
    text-transform: uppercase;
}

.d-comment__author-label--staff {
    display: none;
}

.d-comment--staff .d-comment__author-label--staff {
    display: block;
}

.d-comment__timestamp {
    margin-bottom: $gs-baseline;
    @include fs-textSans(1);

    @include mq(tablet) {
        display: inline;
    }

    a {
        color: $c-neutral2;
    }
    .i-comment-anchor {
        display: none;
        vertical-align: middle;
        margin-left: 2px;
    }
    .d-comment__inner:hover & .i-comment-anchor,
    .d-top-comment__meta:hover & .i-comment-anchor {
        display: inline-block;
    }
}

.d-comment__reply-to-author,
.d-comment-box__reply-to-author {
    padding-right: $gs-gutter / 4;
    display: inline;
    @include fs-textSans(4);
}

.d-comment__author {
    display: inline;
    padding-right: 0;
}

.d-comment__meta-text {
    position: static;
    margin-left: 0;
}

.i-reply-grey {
    margin-bottom: -4px;
    display: inline-block;
}
.d-comment-box--top-level .i-reply-grey {
    display: none;
}

.d-comment--new {
    .d-comment__reply-wrapper {
        display: none;
    }
}

.d-comment__content {
    margin-top: $gs-baseline / 2;
    @include mq($until: tablet) {
        clear: both;
    }
}

.d-comment__pick {
    margin-bottom: $gs-baseline / 6;
    white-space: nowrap;
    @include fs-textSans(4);
    font-weight: bold;

    .i-gupickasterisk {
        margin-bottom: -4px;
        margin-right: $gs-gutter / 4;
    }
}

.d-comment__body,
.d-top-comment__body,
.d-comment-box__parent-comment-body {
    word-wrap: break-word;
}
/* ... */

